--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section>
         <div class="half-width">
             <h1>Our Green Healthcare Network</h1>
             <h1>Will Refresh <span class="orange-color">Your Health Completely</span></h1>
@@ -24,14 +24,26 @@
                 foods,green fruits,vitamins should be kept in the daily life list and the habit of eating less fat food
                 should
                 be developed.Only then a healthy body will be created.</p>
-            <a class="link-button" href=https://fb.watch/6AXnv2tUjH/"">Learn more</a>
+            <a class="link-button" href=https://fb.watch/6AXnv2tUjH/">Learn more</a>
         </div>
-        <div class="half-banner">
+        <div class="half-width">
             <img src="images/maliha-pic-with-bg.png" alt="">
         </div>
     </section>
+    <section class="About-Us">
+        <div class="halh-width">
+            <img src="images/maliha.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1><span class="orange-color">About Us</span> </h1>
+            <p>I am Sabikunnaher Tithi.Started working on a dream in the new madness to deliver everyone to healthy
+                food.I think no matter how small the dream is,if it is true,it will definitely reach the verge of
+                success.I will try and give health care to everyone as much as I can.</p>
+            <a class="link-button" href="link-button" href=https://fb.watch/6AXnv2tUjH/">Contact me</a>
+        </div>
+    </section>
 
-    </p>
+
 </body>
 
 </html>
