my recipie added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible-container">
         <div class="half-width">
             <h1>Our Green Healthcare Network</h1>
             <h1>Will Refresh <span class="orange-color">Your Health Completely</span></h1>
@@ -30,7 +30,7 @@
             <img src="images/maliha-pic-with-bg.png" alt="">
         </div>
     </section>
-    <section class="About-Us">
+    <section class="About-Us flexible-container">
         <div class="halh-width">
             <img src="images/maliha.png" alt="">
         </div>
@@ -42,8 +42,49 @@
             <a class="link-button" href="link-button" href=https://fb.watch/6AXnv2tUjH/">Contact me</a>
         </div>
     </section>
+    <section class="My recipies-area">
+        <h1>My Recipies</h1>
+        <p>Always fresh veggies combined with the foods I make.I think you need fresh vegetables to stay healthy.</p>
+        <div class="flexible-container">
+            <div id="web-dhaba-recipie" class="recipie-item">
+                <h2>Dhaba Style Egg Curry</h2>
+                <p>Egg curry is a deliciously rich onion tomato gravy,tastes exactly like the ones you get in
+                    dhabas.These
+                    are perfect with some rice orparatha and fresh salad on the side.</p>
+            </div>
+            <div id="web-kim-recipie" class="recipie-item">
+                <h2>Kim's Lasagna</h2>
+                <p>A big baked lasagna features Itilian sausage,ground beef and 3 kinds of Italian cheeses plus a
+                    homemade
+                    red sauce for a family-pleasing dinner that's great for health.</p>
+            </div>
+            <div id="web-vegetables-recipie" class="recipie-item">
+                <h2>Vegetables Soup</h2>
+                <p>Fresh green beans,fresh corn,chicken both,carrots,diced.This vegetable soup recipies and for good
+                    reason!
+                </p>
+            </div>
+        </div>
+        <div class="flexible-container">
+            <div class="recipie-item">
+                <h2>2 Million</h2>
+                <p>Youtube Follower</p>
+            </div>
+            <div class="recipie-item">
+                <h2>5 Million</h2>
+                <p>Face Book</p>
+            </div>
+            <div class="recipie-item">
+                <h2>800K</h2>
+                <p>Instagram Follower</p>
+            </div>
+        </div>
+    </section>
 
-
+    <footer>
+        <p>@ Our Green Healthcare Network</p>
+        <p>Eat Healthy To Live Healthy</p>
+    </footer>
 </body>
 
 </html>
